Fix intro alignment

--- a/src/App.scss
+++ b/src/App.scss
@@ -19,11 +19,13 @@
 }
 
 h1 {
+    min-width: 350px;
     font-family: var(--header-text);
     font-weight: 400;
+    border: 1px solid red;
     span {
         font-weight: 700;
-        word-break: keep-all;
+        white-space: nowrap;
     }
 }
 h4, p, a {
